fixed a few more bugs with styling on mobile

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .working-area {
-  min-height: 130vh;
+  min-height: 160vh;
   // min-height: 185vh;
   width: 100%;
   background-color: var(--very-light-grey);
