--- a/styles/search.scss
+++ b/styles/search.scss
@@ -67,7 +67,7 @@
         border-radius: 30px;
         box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
         // box-shadow: 0 0 8px rgba($color: #000000, $alpha: .6);
-
+        padding-bottom: 2px;
         z-index: 0;
       }
       
@@ -76,7 +76,9 @@
         grid-column: 3 / 4;
         grid-row: 1 / -1;
         z-index: 1;
-        padding-right: 10px;
+        padding-right: 15px;
+        color: grey;
+        font-size: 17px;
       }
   
     }
